syntax = "proto3";

package chat;

option java_package = "com.pm.chatservice.grpc";
option java_multiple_files = true;

service ChatService {
  rpc SaveMessage(SaveChatMessageRequest) returns (SaveChatMessageResponse);
  rpc GetMessages(GetChatMessagesRequest) returns (GetChatMessagesResponse);
  rpc GetChatRoomId(ChatRoomRequest) returns (ChatRoomResponse);
}

message ChatMessage {
  string id = 1;
  string chatId = 2;
  string senderId = 3;
  string recipientId = 4;
  string content = 5;
  int64 timestamp = 6;
}

message SaveChatMessageRequest {
  string senderId = 1;
  string recipientId = 2;
  string content = 3;
}

message SaveChatMessageResponse {
  ChatMessage message = 1;
}

message GetChatMessagesRequest {
  string senderId = 1;
  string recipientId = 2;
}

message GetChatMessagesResponse {
  repeated ChatMessage messages = 1;
}

message ChatRoomRequest {
  string senderId = 1;
  string recipientId = 2;
  bool createIfNotExists = 3;
}

message ChatRoomResponse {
  string chatId = 1;
}
